@startuml
legend top
US005 - As Administrator, I want to inactivate a user account.
US006 - As Administrator, I want to activate a user account.
end legend
skinparam sequenceMessageAlign center
title TO INACTIVATE USER ACCOUNT

class ChangeStatusController {
-accountService
+changeStatus(email, status)
}

class AccountService {
-accountRepository
-account
+changeStatus(email, status)
}

class AccountRepository{
+getAccountByEmail(email)
+updateAccount(accountUpdated)
}

interface IAccountRepository{
+getAccountByEmail(email)
+updateAccount(accountUpdated)
}

class Account <<root>>{
-status
+changeStatus(status)
+hasEmail(email)
}

AccountRepository "1"->"*" Account: has
ChangeStatusController"1 " <.. "1 "AccountService : is injected
IAccountRepository ..> AccountService : is injected
AccountRepository --|> IAccountRepository : implements

@enduml
